[gd_scene load_steps=7 format=2]

[ext_resource path="res://Game.gd" type="Script" id=1]
[ext_resource path="res://Pawn.tscn" type="PackedScene" id=2]
[ext_resource path="res://Character.gd" type="Script" id=3]
[ext_resource path="res://Weapons.tscn" type="PackedScene" id=4]
[ext_resource path="res://action/ActionButton.tscn" type="PackedScene" id=5]

[sub_resource type="StyleBoxFlat" id=1]

content_margin_left = -1.0
content_margin_right = -1.0
content_margin_top = -1.0
content_margin_bottom = -1.0
bg_color = Color( 0.753906, 0.753906, 0.753906, 1 )
draw_center = true
border_width_left = 0
border_width_top = 0
border_width_right = 0
border_width_bottom = 0
border_color = Color( 0.8, 0.8, 0.8, 1 )
border_blend = false
corner_radius_top_left = 0
corner_radius_top_right = 0
corner_radius_bottom_right = 0
corner_radius_bottom_left = 0
corner_detail = 8
expand_margin_left = 0.0
expand_margin_right = 0.0
expand_margin_top = 0.0
expand_margin_bottom = 0.0
shadow_color = Color( 0, 0, 0, 0.6 )
shadow_size = 0
anti_aliasing = true
anti_aliasing_size = 1

[node name="Game" type="Control" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 1.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
script = ExtResource( 1 )
_sections_unfolded = [ "Mouse", "Visibility" ]

[node name="Panel" type="Panel" parent="." index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 1.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
custom_styles/panel = SubResource( 1 )
_sections_unfolded = [ "Mouse", "custom_styles" ]

[node name="PlayerPawn" parent="." index="1" instance=ExtResource( 2 )]

self_modulate = Color( 0.501961, 0.533333, 1, 1 )
position = Vector2( 460, 640 )
model_node = NodePath("../Model/PlayerCharacter")

[node name="EnemyPawn" parent="." index="2" instance=ExtResource( 2 )]

self_modulate = Color( 1, 0.345098, 0.345098, 1 )
position = Vector2( 1200, 640 )
model_node = NodePath("../Model/EnemyCharacter")

[node name="Model" type="Node" parent="." index="3"]

[node name="PlayerCharacter" type="Node" parent="Model" index="0"]

script = ExtResource( 3 )
hp = 40
max_hp = 40
ac = 10
str_mod = 0

[node name="EnemyCharacter" type="Node" parent="Model" index="1"]

script = ExtResource( 3 )
hp = 30
max_hp = 30
ac = 10
str_mod = 0

[node name="Weapons" parent="Model" index="2" instance=ExtResource( 4 )]

[node name="ActionBar" type="HBoxContainer" parent="." index="4"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 520.0
margin_top = 840.0
margin_right = 990.0
margin_bottom = 950.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
alignment = 0

[node name="Defense" parent="ActionBar" index="0" instance=ExtResource( 5 )]

margin_top = 23.0
margin_bottom = 87.0
size_flags_vertical = 4
_sections_unfolded = [ "Rect", "Size Flags", "custom_colors", "custom_constants", "custom_styles" ]

[node name="FastAttack" parent="ActionBar" index="1" instance=ExtResource( 5 )]

margin_left = 68.0
margin_top = 23.0
margin_right = 132.0
margin_bottom = 87.0
size_flags_vertical = 4
_sections_unfolded = [ "Rect", "Size Flags", "custom_colors", "custom_constants", "custom_styles" ]

[node name="StrongAttack" parent="ActionBar" index="2" instance=ExtResource( 5 )]

margin_left = 136.0
margin_top = 23.0
margin_right = 200.0
margin_bottom = 87.0
size_flags_vertical = 4
_sections_unfolded = [ "Rect", "Size Flags", "custom_colors", "custom_constants", "custom_styles" ]


